force-app/main/default/objects/External_Vendor_API_Keys__c/External_Vendor_API_Keys__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>PG-00002 - Custom Setting to store an external vendor API keys.</description>
    <label>External Vendor API Keys</label>
</CustomObject>