force-app/main/default/objects/External_Vendor_API_Keys__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>PG-00002 - API Keys for the external vendor.</description>
    <inlineHelpText>API Keys for the external vendor.</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>