force-app/main/default/objects/External_Vendor_API_Keys__c/fields/API_Key_Param_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Param_Name__c</fullName>
    <description>PGP-0008 : Store API Key field name</description>
    <label>API Key Param Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>