force-app/main/default/objects/External_Vendor_API_Keys__c/fields/External_Vendor__c.field-meta.xml
<CustomField>
    <fullName>External_Vendor__c</fullName>
    <description>PG-00002- Name of external vendor</description>
    <inlineHelpText>External vendor name</inlineHelpText>
    <label>External Vendor</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>