force-app/main/default/objects/External_Vendor_API_Keys__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>PGP-0008 : Setting a named credential value for HttpRequest</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>