force-app/main/default/objects/External_Vendor_API_Keys__c/fields/Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Time_Out__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>PGP-0008 : Set HttpRequest Timeout Value</description>
    <label>Time Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>